--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
                         </manifest>
                     </archive>
                     <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                        <descriptorRef>full</descriptorRef>
                     </descriptorRefs>
                 </configuration>
                 <executions>
@@ -73,5 +73,5 @@
             </plugin>
         </plugins>
     </build>
-    
+
 </project>
