--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.processing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.7</version>
+        </dependency>
     </dependencies>
 
     <build>
